[package]
name = "iban"
description = "IBAN parsing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnPeel/iban"
documentation = "https://docs.rs/iban"
version = "0.1.7"
edition = "2021"
rust-version = "1.60.0"

[features]
default = ["std"]
std = []
rand = ["dep:rand"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arrayvec = { version = "0.7", default-features = false }
phf = { version = "0.11", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }

[build-dependencies]
csv = "1"
phf_codegen = "0.11"
quote = "1"
regex = "1"
serde = { version = "1.0.7", features = ["derive"] }

[dev-dependencies]
test-case = "3"
rand = "0.8"

# NOTE: test-case-core has an invalid minimal version for syn.
syn = { version = ">=1.0.12", default-features = false }
