[package]
name = "iban"
description = "IBAN parsing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnPeel/iban"
documentation = "https://docs.rs/iban"
version = "0.2.0"
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = []
rand_0_8 = ["dep:rand_0_8"]
rand_0_9 = ["dep:rand_0_9"]
rand = ["rand_0_8"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
phf = { version = "0.11.0", default-features = false }
rand_0_8 = { package = "rand", version = "0.8.0", default-features = false, optional = true }
rand_0_9 = { package = "rand", version = "0.9.0", default-features = false, optional = true }
serde = { version = "1.0.7", default-features = false, features = ["derive"], optional = true }

[build-dependencies]
csv = "1.0.0"
phf_codegen = "0.11.0"
quote = "1.0.35"
regex = "1.0.0"

serde = { version = "1.0.7", features = ["derive"] }

# NOTE: `direct-minimal-versions` is weird with serde.
serde_derive = "1.0.7"

[dev-dependencies]
serde_json = "1.0.0"
test-case = "3.0.0"
rand_0_8 = { package = "rand", version = "0.8.0" }
rand_0_9 = { package = "rand", version = "0.9.0" }

# NOTE: test-case-core has an invalid minimal version for syn.
syn = { version = ">=1.0.91", default-features = false }
